tests/validation/12_assignments.spectra
// Teste 12: Atribuições
module assignments;

fn test_assignments() -> int {
    let x = 10;
    x = 20;
    x = x + 5;
    x = x * 2;
    x = x - 10;
    return x;
}

fn main() -> int {
    return test_assignments();
}
